--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -1,114 +1,62 @@
 .light {
   --table-bg-color: #fff;
   --table-thead-bg-color: #74879b38;
+  --table-thead-bg-color-hover: #74879b91;
   --table-title-text-color: #140810;
   --table-tr-border-color: #eaeff4;
+  --table-th-border-color: #9b9d9e;
   --table-th-color: #606468;
 }
 
 .dark {
   --table-bg-color: #242526;
   --table-thead-bg-color: #4759e44b;
+  --table-thead-bg-color-hover: #4759e483;
   --table-title-text-color: #fafafa;
   --table-tr-border-color: #4e4f50;
+  --table-th-border-color: #757677;
   --table-th-color: #e0e0e0;
 }
 
-.table {
-  background-color: var(--table-bg-color);
+.table-container {
   width: 100%;
-  border-spacing: 0;
-  border-collapse: collapse;
+  background-color: var(--table-bg-color);
+
   border-radius: 12px;
-  // overflow: hidden;
+  overflow: hidden;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
 
-  & {
-    transition: border-color 50ms, background-color 50ms, color 75ms;
-  }
+.table-area {
+  position: relative;
 
-  &-title {
-    padding: 12px 20px 20px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &-title-text {
-    text-transform: capitalize;
-    font-size: 20px;
-    font-weight: 600;
-    color: var(--table-title-text-color);
-  }
-
-  &-thead {
-    background-color: var(--table-thead-bg-color);
-    padding: 0 10px;
-    transition: border-color 50ms, background-color 50ms, color 75ms;
-  }
-
-  &-tbody {
-    padding: 0 10px 15px;
-  }
-
-  &-tr {
-    width: 100%;
-    display: flex;
-    padding: 10px;
-  }
-
-  &-thead > &-tr {
-    border-bottom: none;
-  }
-
-  &-tbody > &-tr:not(:last-of-type) {
-    border-bottom: 1px solid var(--table-tr-border-color);
-  }
-
-  &-th {
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    color: var(--table-th-color);
-  }
-
-  &-td {
-    font-size: 14px;
-    font-weight: 400;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--table-title-text-color);
-    // border-left: 1px solid var(--table-tr-border-color);
-    // border-right: 1px solid var(--table-tr-border-color);
-  }
-
-  // &-th,
-  // &-td {
-  //   // overflow: hidden;
-  //   // white-space: nowrap;
-  //   // text-overflow: ellipsis;
-  // }
-
-  &-tr > &-td {
-    padding: 0 6px;
-
-    &:first-of-type {
-      padding-left: 0;
-    }
-
-    &:last-of-type {
-      padding-right: 0;
+  &--loading {
+    &::after {
+      content: "";
+      height: 100%;
+      width: 100%;
+      background: #ffffff8c;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 5;
     }
   }
+}
+
+.table {
+  width: 100%;
+  border-collapse: collapse;
+  border-spacing: 0;
+  table-layout: auto;
+  user-select: none;
 
   &-pagination {
     display: flex;
     align-items: center;
 
     &-total {
-      margin-right: 10px;
+      margin-right: 20px;
       font-size: 16px;
       color: var(--table-th-color);
     }
@@ -120,18 +68,31 @@
       cursor: pointer;
       user-select: none;
       transition: all 100ms;
-      border-radius: 4px;
+      border-radius: 6px;
+      border: 1px solid rgba($color: #4759e4, $alpha: 0.25);
+      padding: 5px;
 
       & > svg {
-        fill: #74879b;
-      }
-
-      &:hover {
-        box-shadow: 0 2px 5px rgba($color: #000000, $alpha: 0.1);
+        fill: #4759e4;
+        height: 20px;
+        width: 20px;
       }
 
       &:hover > svg {
         fill: #4759e4;
+      }
+
+      &:not(:last-of-type) {
+        margin-right: 4px;
+      }
+
+      &--disabled {
+        cursor: initial;
+
+        & > svg,
+        & > svg:hover {
+          fill: #00000027 !important;
+        }
       }
     }
 
@@ -141,37 +102,92 @@
       margin: 0 10px;
     }
 
-    &-page-button {
-      color: #74879b;
-      height: 25px;
-      width: 25px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      border-radius: 6px;
-      font-size: 15px;
-      font-weight: 500;
-      transition: all 150ms;
-      cursor: pointer;
-      user-select: none;
-
-      &:not(:last-of-type) {
-        margin-right: 2.5px;
-      }
-
-      &--active {
-        background-color: #4759e4;
-        color: #fff;
-      }
-
-      &--filler {
-        cursor: context-menu;
-      }
-    }
-
-    &-row-count-changer {
+    &-page-size-select {
       margin-left: 10px;
       min-width: 150px;
+    }
+
+    &-page-index-select {
+      min-width: 75px;
+    }
+  }
+
+  &-no-data {
+    &-icon {
+      height: 80px;
+      width: 80px;
+      fill: var(--table-thead-bg-color);
+      margin-bottom: 5px;
+      margin-top: 20px;
+    }
+
+    &-text {
+      font-size: 17px;
+      color: var(--table-th-color);
+    }
+  }
+
+  &-thead {
+    background-color: var(--table-thead-bg-color);
+    padding: 0 10px;
+    transition: border-color 50ms, background-color 50ms, color 75ms;
+  }
+
+  &-tbody {
+    width: 100%;
+  }
+
+  &-tr {
+    padding: 12px;
+    width: 100%;
+  }
+
+  &-td {
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    color: var(--table-title-text-color);
+    transition: all 200ms;
+    border-bottom: 1px solid var(--table-tr-border-color);
+  }
+
+  &-td,
+  &-th {
+    padding: 8px;
+    text-align: center;
+    vertical-align: middle;
+  }
+
+  &-th {
+    text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 600;
+    text-align: center;
+    color: var(--table-th-color);
+    position: relative;
+
+    &-sort {
+      position: absolute;
+      top: 50%;
+      right: 2.5px;
+      transform: translateY(-50%);
+      display: flex;
+      flex-direction: column;
+
+      & > svg {
+        height: 20px;
+        width: 20px;
+        fill: #b9b9be;
+        transition: all 200ms;
+
+        &:first-of-type {
+          transform: translateY(5.5px);
+        }
+
+        &:last-of-type {
+          transform: translateY(-5.5px);
+        }
+      }
     }
   }
 }
