--- a/src/components/Tooltip/styles.scss
+++ b/src/components/Tooltip/styles.scss
@@ -1,10 +1,10 @@
 .light {
-  --tooltip-slot-bg: #000000bf;
+  --tooltip-slot-bg: #000000f0;
   --tooltip-slot-color: #fff;
 }
 
 .dark {
-  --tooltip-slot-bg: #ffffffbf;
+  --tooltip-slot-bg: #ffffffec;
   --tooltip-slot-color: #242526;
 }
 
@@ -21,11 +21,18 @@
   height: max-content;
   background-color: var(--tooltip-slot-bg);
   padding: 4px 10px;
-  border-radius: 4px;
+  border-radius: 6px;
   font-size: 15px;
   color: var(--tooltip-slot-color);
   cursor: pointer;
   user-select: none;
+
+  &::after {
+    content: "";
+    height: 0;
+    width: 0;
+    position: absolute;
+  }
 
   &--top,
   &--bottom {
@@ -35,5 +42,49 @@
   &--right,
   &--left {
     transform: translateY(-50%);
+  }
+
+  &--top {
+    &::after {
+      border-right: 6px solid transparent;
+      border-top: 6px solid var(--tooltip-slot-bg);
+      border-left: 6px solid transparent;
+      top: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  &--bottom {
+    &::after {
+      border-right: 6px solid transparent;
+      border-bottom: 6px solid var(--tooltip-slot-bg);
+      border-left: 6px solid transparent;
+      bottom: 100%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+  }
+
+  &--right {
+    &::after {
+      border-top: 6px solid transparent;
+      border-right: 6px solid var(--tooltip-slot-bg);
+      border-bottom: 6px solid transparent;
+      top: 50%;
+      right: 100%;
+      transform: translateY(-50%);
+    }
+  }
+
+  &--left {
+    &::after {
+      border-top: 6px solid transparent;
+      border-left: 6px solid var(--tooltip-slot-bg);
+      border-bottom: 6px solid transparent;
+      top: 50%;
+      left: 100%;
+      transform: translateY(-50%);
+    }
   }
 }
