--- a/src/components/Map/styles.scss
+++ b/src/components/Map/styles.scss
@@ -1,15 +1,131 @@
+.light {
+  --marker-indicator: #242526;
+}
+
+.dark {
+  --marker-indicator: #fff;
+}
+
 .map {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
-  border-radius: 8px;
-  overflow: hidden;
+  // border-radius: 20px;
+  // overflow: hidden;
+  // padding: 15px;
+  position: relative;
+
+  & > div {
+    border-radius: 15px;
+    overflow: hidden;
+  }
+
+  &-buttons {
+    border-radius: 0 !important;
+    overflow: visible !important;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-button {
+    border-radius: 8px;
+    border: none;
+    cursor: pointer;
+    padding: 8px;
+    box-shadow: 0 2px 10px 3px #0000000d;
+    transition: all 100ms;
+
+    &:active {
+      transform: scale(0.98);
+    }
+
+    & > svg {
+      height: 20px;
+      width: 20px;
+    }
+
+    &-reset > svg {
+      transform: translateY(1px);
+      fill: #4759e4;
+    }
+
+    &-reset--active > svg {
+      fill: #6f6e6e;
+    }
+
+    &-zoom {
+      & > svg {
+        fill: #6f6e6e;
+      }
+
+      &:nth-of-type(2) {
+        border-bottom-left-radius: 0 !important;
+        border-bottom-right-radius: 0 !important;
+        border-bottom: 0.5px solid #6f6e6e27;
+      }
+
+      &:nth-of-type(3) {
+        border-top-left-radius: 0 !important;
+        border-top-right-radius: 0 !important;
+      }
+
+      &:hover > svg {
+        fill: #4759e4;
+      }
+    }
+  }
 }
 
-.leaflet-container {
-  width: 100%;
-  height: 100%;
+.marker {
+  height: 20px;
+  width: 20px;
+  position: relative;
+
+  &-indicator {
+    height: 20px;
+    width: 20px;
+    border-radius: 50%;
+    background-color: var(--marker-indicator);
+    position: relative;
+    z-index: 2;
+  }
+
+  &::before {
+    content: "";
+    width: 300%;
+    height: 300%;
+    border-radius: 50%;
+    background-color: #4759e4;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: -1;
+    animation: markerPulse 2s infinite ease-in-out;
+    transform-origin: center center;
+  }
+
+  &::after {
+    content: "";
+    width: 40%;
+    height: 40%;
+    border-radius: 50%;
+    background-color: #4759e4;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 2;
+  }
 }
 
-.leaflet-marker-icon {
-  filter: invert(30%) sepia(63%) saturate(3555%) hue-rotate(200deg)
-    brightness(100%) contrast(97%);
+@keyframes markerPulse {
+  0% {
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 0;
+  }
 }
