--- a/src/components/Table/styles.scss
+++ b/src/components/Table/styles.scss
@@ -27,6 +27,13 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
 }
 
+.table-title {
+  padding: 10px 20px;
+  font-size: 22px;
+  font-weight: 500;
+  color: var(--table-title-text-color);
+}
+
 .table-area {
   position: relative;
 
