--- a/src/pages/Requests/Filters/styles.scss
+++ b/src/pages/Requests/Filters/styles.scss
@@ -6,5 +6,7 @@
     left: 0;
     z-index: 4;
     box-shadow: 0 2px 20px var(--header-box-shadow-color);
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
   }
 }
